Update sampelset in paddlejob and samplejob controller

--- a/config/crd/v1beta1/batch.paddlepaddle.org_paddlejobs.yaml
+++ b/config/crd/v1beta1/batch.paddlepaddle.org_paddlejobs.yaml
@@ -5673,6 +5673,17 @@ spec:
               required:
               - replicas
               type: object
+            sampleSetRef:
+              properties:
+                mountPath:
+                  type: string
+                name:
+                  type: string
+                namespace:
+                  type: string
+              required:
+              - mountPath
+              type: object
             schedulingPolicy:
               properties:
                 minAvailable:
