--- a/config/manager/manager.yaml
+++ b/config/manager/manager.yaml
@@ -55,3 +55,4 @@ spec:
             cpu: 100m
             memory: 20Mi
       terminationGracePeriodSeconds: 10
+      serviceAccountName: manager-sa
