--- a/deploy/v1/operator.yaml
+++ b/deploy/v1/operator.yaml
@@ -415,7 +415,7 @@ spec:
         - --namespace=paddle-system
         command:
         - /manager
-        image: registry.baidubce.com/paddle-operator/controller:v0.3.0
+        image: registry.baidubce.com/paddle-operator/controller:v0.4-alpha
         imagePullPolicy: Always
         livenessProbe:
           httpGet:
