--- a/config/crd/bases/batch.paddlepaddle.org_paddlejobs.yaml
+++ b/config/crd/bases/batch.paddlepaddle.org_paddlejobs.yaml
@@ -22,7 +22,7 @@ spec:
     - jsonPath: .status.phase
       name: Status
       type: string
-    - jsonPath: .status.mode
+    - jsonPath: .spec.mode
       name: Mode
       type: string
     - jsonPath: .metadata.creationTimestamp
@@ -45,6 +45,9 @@ spec:
               elastic:
                 type: integer
               intranet:
+                type: string
+              mode:
+                pattern: (PS|Collective|Single|Custom)
                 type: string
               schedulingPolicy:
                 properties:
@@ -70,6 +73,7 @@ spec:
                     limits:
                       type: integer
                     name:
+                      pattern: ^(\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))(([KMGTPE]i)|[numkMGTPE]|([eE](\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))))?$
                       type: string
                     replicas:
                       type: integer
@@ -2915,11 +2919,14 @@ spec:
                           type: object
                       type: object
                   required:
+                  - name
                   - replicas
                   type: object
                 type: array
               withGloo:
                 type: integer
+            required:
+            - mode
             type: object
           status:
             properties:
@@ -2927,8 +2934,6 @@ spec:
                 format: date-time
                 type: string
               elastic:
-                type: string
-              mode:
                 type: string
               observedGeneration:
                 type: integer
