--- a/config/crd/v1beta1/batch.paddlepaddle.org_paddlejobs.yaml
+++ b/config/crd/v1beta1/batch.paddlepaddle.org_paddlejobs.yaml
@@ -12,7 +12,7 @@ spec:
   - JSONPath: .status.phase
     name: Status
     type: string
-  - JSONPath: .status.mode
+  - JSONPath: .spec.mode
     name: Mode
     type: string
   - JSONPath: .metadata.creationTimestamp
@@ -47,6 +47,9 @@ spec:
               type: integer
             intranet:
               type: string
+            mode:
+              pattern: (PS|Collective|Single|Custom)
+              type: string
             schedulingPolicy:
               properties:
                 minAvailable:
@@ -71,6 +74,7 @@ spec:
                   limits:
                     type: integer
                   name:
+                    pattern: ^(\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))(([KMGTPE]i)|[numkMGTPE]|([eE](\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))))?$
                     type: string
                   replicas:
                     type: integer
@@ -2879,11 +2883,14 @@ spec:
                         type: object
                     type: object
                 required:
+                - name
                 - replicas
                 type: object
               type: array
             withGloo:
               type: integer
+          required:
+          - mode
           type: object
         status:
           properties:
@@ -2891,8 +2898,6 @@ spec:
               format: date-time
               type: string
             elastic:
-              type: string
-            mode:
               type: string
             observedGeneration:
               type: integer
