--- a/deploy/heter/collective.yaml
+++ b/deploy/heter/collective.yaml
@@ -1,33 +1,57 @@
 apiVersion: batch.paddlepaddle.org/v1
 kind: PaddleJob
 metadata:
-  name: deepfm
+  name: collective-resnet
 spec:
   cleanPodPolicy: OnFailed
   withGloo: 1
   mode: Collective
   tasks:
   - name: gpu-1
-    replicas: 2
+    replicas: 1
     template:
       spec:
         containers:
           - name: paddle
-            image: registry.baidubce.com/paddle-operator/demo-deepfm:v1
+            image: registry.baidubce.com/paddle-operator/demo-resnet:v1
             imagePullPolicy: Always
             command:
-            - python3
+            - python
             args:
-            - train.py
+            - "-m"
+            - "paddle.distributed.launch"
+            - "train_fleet.py"
+            volumeMounts:
+            - mountPath: /dev/shm
+              name: dshm
+            resources:
+              limits:
+                nvidia.com/gpu: 1
+        volumes:
+        - name: dshm
+          emptyDir:
+            medium: Memory
   - name: xpu-22
     replicas: 2
     template:
       spec:
         containers:
           - name: paddle
-            image: registry.baidubce.com/paddle-operator/demo-deepfm:v1
+            image: registry.baidubce.com/paddle-operator/demo-resnet:v1
             imagePullPolicy: Always
             command:
-            - python3
+            - python
             args:
-            - train.py
+            - "-m"
+            - "paddle.distributed.launch"
+            - "train_fleet.py"
+            volumeMounts:
+            - mountPath: /dev/shm
+              name: dshm
+            resources:
+              limits:
+                nvidia.com/gpu: 1
+        volumes:
+        - name: dshm
+          emptyDir:
+            medium: Memory
