--- a/config/crd/bases/batch.paddlepaddle.org_paddlejobs.yaml
+++ b/config/crd/bases/batch.paddlepaddle.org_paddlejobs.yaml
@@ -67,6 +67,8 @@ spec:
                   queue:
                     type: string
                 type: object
+              startInOrder:
+                type: integer
               tasks:
                 items:
                   properties:
