--- a/config/crd/v1beta1/batch.paddlepaddle.org_paddlejobs.yaml
+++ b/config/crd/v1beta1/batch.paddlepaddle.org_paddlejobs.yaml
@@ -68,6 +68,8 @@ spec:
                 queue:
                   type: string
               type: object
+            startInOrder:
+              type: integer
             tasks:
               items:
                 properties:
