--- a/deploy/v1/crd.yaml
+++ b/deploy/v1/crd.yaml
@@ -79,6 +79,8 @@ spec:
                   queue:
                     type: string
                 type: object
+              startInOrder:
+                type: integer
               tasks:
                 items:
                   properties:
