--- a/deploy/v1beta1/crd.yaml
+++ b/deploy/v1beta1/crd.yaml
@@ -82,6 +82,8 @@ spec:
                 queue:
                   type: string
               type: object
+            startInOrder:
+              type: integer
             tasks:
               items:
                 properties:
