--- a/deploy/examples/wide_and_deep_podip.yaml
+++ b/deploy/examples/wide_and_deep_podip.yaml
@@ -4,7 +4,7 @@ metadata:
   name: wide-ande-deep-podip
 spec:
   intranet: PodIP
-  cleanPodPolicy: Nerver
+  cleanPodPolicy: Never
   worker:
     replicas: 2
     template:
